--- a/BandsMvc/Views/Bands/Details.cshtml
+++ b/BandsMvc/Views/Bands/Details.cshtml
@@ -1,6 +1,5 @@
 ﻿@using BandsMvc.Models;
-@model Band[]
-
+@model Band;
 
 <!DOCTYPE html>
 <html>
@@ -10,12 +9,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
 </head>
 <body>
-    <h3> Band Names </h3>
-    <ul> 
-    @for (int i = 0; i < Model.Length; i++)
-    {
-        <li> <a href="details/@Model[i].Id">  @Model[i].Name <a/> </li> 
-    }
-    </ul>
+    <h4>@Model.Description </h4>
 </body>
 </html>
